fix patient area and picture problem

--- a/Areas/Patient/Views/Shared/_PatientLayout.cshtml
+++ b/Areas/Patient/Views/Shared/_PatientLayout.cshtml
@@ -42,8 +42,8 @@
     <nav id="sidebar" class="sidebar">
         <div class="header-section">
             <div class="logo-section">
-                <img src="~/images/logo2.png" alt="SmileCraft" class="logo logo-expanded">
-                <img src="~/images/logo_round.png" alt="SmileCraft" class="logo logo-collapsed">
+                <img src="/images/Logo/logo2.png" alt="SmileCraft" class="logo logo-expanded">
+                <img src="/images/Logo/logo_round.png" alt="SmileCraft" class="logo logo-collapsed">
             </div>
             <button class="menu-toggle">
                 <i class="bi bi-list"></i>
