--- a/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -114,7 +114,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 mb-3">
-                        <a asp-area="Admin" asp-controller="Doctor" asp-action="Create" class="btn btn-success btn-block py-3">
+                        <a asp-area="" asp-controller="Doctor" asp-action="Create" class="btn btn-success btn-block py-3">
                             <i class="bi bi-person-plus me-2"></i> Add Doctor
                         </a>
                     </div>
