--- a/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -25,8 +25,8 @@
                 <a class="list-group-item list-group-item-action bg-dark text-white p-3" asp-area="" asp-controller="TreatmentType" asp-action="Index">
                     <i class="bi bi-clipboard2-pulse me-2"></i> Treatments
                 </a>
-                <a class="list-group-item list-group-item-action bg-dark text-white p-3" href="#">
-                    <i class="bi bi-person-badge me-2"></i> Doctors
+                <a class="list-group-item list-group-item-action bg-dark text-white p-3" asp-area="" asp-controller="Doctor" asp-action="Index">
+                    <i class="bi bi-person-badge me-2"></i> Doctor
                 </a>
                 <a class="list-group-item list-group-item-action bg-dark text-white p-3" href="#">
                     <i class="bi bi-people me-2"></i> Patients
