--- a/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="card-footer bg-transparent border-0">
-                <a href="#" class="text-white small stretched-link">View Details <i class="bi bi-arrow-right"></i></a>
+                <a asp-area="" asp-controller="Doctor" asp-action="Index" class="text-white small stretched-link">View Details <i class="bi bi-arrow-right"></i></a>
             </div>
         </div>
     </div>
