--- a/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -28,6 +28,9 @@
                 <a class="list-group-item list-group-item-action bg-dark text-white p-3" href="#">
                     <i class="bi bi-person-badge me-2"></i> Doctors
                 </a>
+                <a class="list-group-item list-group-item-action bg-dark text-white p-3" asp-area="Admin" asp-controller="TimeSlot" asp-action="Index">
+                    <i class="bi bi-calendar-week me-2"></i> Manage Doctor Slots
+                </a>
                 <a class="list-group-item list-group-item-action bg-dark text-white p-3" href="#">
                     <i class="bi bi-people me-2"></i> Patients
                 </a>
